spec/mutating_calls.expected
[1, 2, 3, 4]
[1, 2, 3, 4]
[1, 2, 3, 4, 5]
HELLO
Internal error: spec/mutating_calls.kex:21:15: runtime error: Cannot use '!' on immutable binding: frozen
